Use builtin datetime module instead of third-party arrow package.
Update ics package and its usage.

Format codes and comments and make debug print anchor text.

Update typing import list.

Format code and resolve lint warnings.

Remove arrow direct dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 aiohttp = "^3.7.4.post0"
-arrow = "^0.14.7"
-ics = "0.7"
+ics = "^0.7.2"
 lxml = "^4.6.3"
 python-dotenv = "^0.15.0"
 
