Fix this Poetry project name to match its module files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "holodule-ics"
+name = "holodule"
 version = "0.1.0"
 description = ""
 authors = ["Sarisia <git@sarisia.cc>"]
