--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "holodule"
 version = "0.1.0"
-description = ""
-authors = ["Sarisia <git@sarisia.cc>"]
+description = "This is an iCalendar generator for Holodule."
+authors = ["Sarisia <git@sarisia.cc>", "gemmaro <gemmaro.dev@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
