--- a/.github/workflows/update-ics.yml
+++ b/.github/workflows/update-ics.yml
@@ -1,17 +1,12 @@
 name: update-ics
 on:
   schedule:
-    - cron: '12/15 * * * *'
+    - cron: '0 * * * *'
   workflow_dispatch:
   push:
-    branches-ignore:
-      - 'gh-pages'
-      - 'public'
-    tags-ignore:
-      - "**"
 
 jobs:
-  update:
+  build:
     name: Update ics
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -20,47 +15,45 @@ jobs:
       packages: read
     steps:
       - name: checkout
-        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
+        uses: actions/checkout@v4
 
-      - name: cache
-        uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84
+      - uses: actions/setup-python@v5
         with:
-          path: ".venv"
-          key: ${{ runner.os }}-${{ hashFiles('poetry.lock') }}
+          python-version: '3.13'
 
-      - name: run
-        uses: devcontainers/ci@57eaf0c9b518a76872bc429cdceefd65a912309b
-        with:
-          imageName: ghcr.io/${{ github.repository }}/devcontainer
-          push: never
-          runCmd: |
-            set -e
+      - name: install pipx
+        run: |
+          sudo apt-get update
+          sudo apt-get install pipx
+          pipx ensurepath
 
-            poetry install
-            poetry run python run.py
-          env: |
-            HOLODULE_PAGE
-            HOLODULE_YOUTUBE_KEY
+      - name: install Poetry
+        run: pipx install poetry==2.1.1
+
+      - name: install dependencies
+        run: poetry install
+
+      - name: generate calendar files
+        run: poetry run python run.py
         env:
-          HOLODULE_PAGE: ${{ vars.HOLODULE_PAGE }}
           HOLODULE_YOUTUBE_KEY: ${{ secrets.HOLODULE_YOUTUBE_KEY }}
 
-      - name: deploy to public branch
-        if: github.ref_name == 'master'
-        uses: peaceiris/actions-gh-pages@373f7f263a76c20808c831209c920827a82a2847
+      - name: Upload static files as artifact
+        id: deployment
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ github.token }}
-          publish_dir: ./public
-          publish_branch: public
-          keep_files: true
-          commit_message: update ics
-          cname: sarisia.cc
-          user_name: mntaqua
-          user_email: '91774192+mntaqua@users.noreply.github.com'
+          path: public/
 
-      - name: notify to Discord if failure
-        if: failure()
-        uses: sarisia/actions-status-discord@9904e3130b8905d5b973df25623f17672dcb3466
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          title: holodule - update ics
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+    permissions:
+      pages: write
+      id-token: write
