--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-aiohttp = "^3.7.4.post0"
 ics = "^0.7.2"
 python-dotenv = "^0.15.0"
 
+aiohttp = "^3.11"
+aiohttp-client-cache = "^0.12.4"
+aiosqlite = "^0.18.0" # SQLite backend for aiohttp-client-cache
 
 [build-system]
 requires = ["poetry-core"]
