Setup documentation with Sphinx.
* Install Sphinx intl tool.

* Setup Gettext configs.

* Generate PO files.

* Replace contributing file with Japanese one.

* Add change log in Japanese.

* Add translation links.

* Update Poetry dependencies.

* Add GitHub Action phase.

--- a/.github/workflows/update-ics.yml
+++ b/.github/workflows/update-ics.yml
@@ -38,6 +38,9 @@ jobs:
         env:
           HOLODULE_YOUTUBE_KEY: ${{ secrets.HOLODULE_YOUTUBE_KEY }}
 
+      - name: generate documentation
+        run: poetry run make docs
+
       - name: Upload static files as artifact
         id: deployment
         uses: actions/upload-pages-artifact@v3
