--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,11 @@ aiohttp = "^3.11"
 aiohttp-client-cache = "^0.12.4"
 aiosqlite = "^0.18.0" # SQLite backend for aiohttp-client-cache
 
+[tool.poetry.group.dev.dependencies]
+sphinx = "^6.2"
+myst-parser = "^3.0"
+sphinx-intl = "^2.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
