Skip gettext file update when CI.

--- a/.github/workflows/update-ics.yml
+++ b/.github/workflows/update-ics.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: generate documentation
         run: poetry run make docs
+        env:
+          CI: yes # Skip updating gettext files, which somehow causes errors
 
       - name: Upload static files as artifact
         id: deployment
