--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.10"
 ics = "^0.7.2"
 python-dotenv = "^0.15.0"
+isodate = "^0.7.2"
 
 aiohttp = "^3.11"
 aiohttp-client-cache = "^0.12.4"
