Rename project from holodule-ics to holocal.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # required
-HOLODULE_YOUTUBE_KEY=
+HOLOCAL_YOUTUBE_KEY=
 
 # optional
-HOLODULE_PAGE=
-HOLODULE_DIR=
-HOLODULE_LOGLEVEL=DEBUG
+HOLOCAL_PAGE=
+HOLOCAL_DIR=
+HOLOCAL_LOGLEVEL=DEBUG
