--- a/.github/workflows/update-ics.yml
+++ b/.github/workflows/update-ics.yml
@@ -29,7 +29,7 @@ jobs:
       - name: generate calendar files
         run: make run
         env:
-          HOLODULE_YOUTUBE_KEY: ${{ secrets.HOLODULE_YOUTUBE_KEY }}
+          HOLOCAL_YOUTUBE_KEY: ${{ secrets.HOLOCAL_YOUTUBE_KEY }}
 
       - name: generate documentation
         run: poetry run make docs
