--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ description = "This is an iCalendar generator for Holodule."
 authors = ["Sarisia <git@sarisia.cc>", "gemmaro <gemmaro.dev@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+requires-python = ">=3.10"
 
 [tool.poetry.dependencies]
-python = "^3.10"
 ics = "^0.7.2"
 python-dotenv = "^0.15.0"
 isodate = "^0.7.2"
