--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 license_files = ["LICENSE"]
 readme = "README.md"
 requires-python = ">=3.10"
+keywords = ["schedule", "holodule"]
 
 [tool.poetry.dependencies]
 ics = "^0.7.2"
