--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -17,6 +17,7 @@ jobs:
           python-version: '3.13'
       - name: Install Project
         uses: python-poetry/poetry/.github/actions/poetry-install@main
+        args: --without dev
 
       - name: build a binary wheel and a source tarball
         run: poetry build
