--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,16 @@ description = "This is an iCalendar generator for Holodule."
 license = "MIT"
 license_files = ["LICENSE"] # not supported in Poetry?
 readme = "README.md"
-requires-python = ">=3.10"
-authors = ["Sarisia <git@sarisia.cc>", "gemmaro <gemmaro.dev@gmail.com>"]
+requires-python = ">=3.10,<4.0"
 keywords = ["schedule", "holodule"]
+
+[[project.authors]]
+name = "Sarisia"
+email = "git@sarisia.cc"
+
+[[project.authors]]
+name = "gemmaro"
+email = "gemmaro.dev@gmail.com"
 
 [project.urls]
 homepage = "https://gemmaro.github.io/holocal/"
